gitops/clusters/homelab/apps/private/crowdsec-web-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-web-ui
  namespace: private
spec:
  selector:
    app: crowdsec-web-ui
  ports:
    - port: 3000
      targetPort: 3000
